macro/tests/fails/not_a_writer.stderr
error[E0599]: the method `guard` exists for type `u32`, but its trait bounds were not satisfied
 --> $DIR/not_a_writer.rs:5:17
  |
5 |     tco::write!(not_a_writer, "test");
  |                 ^^^^^^^^^^^^ method cannot be called on `u32` due to unsatisfied trait bounds
  |
  = note: the following trait bounds were not satisfied:
          `u32: WriteColor`
          which is required by `u32: WriteColorGuard`
